--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:20-alpine as build-stage
+FROM --platform=linux/amd64 node:20-alpine as build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:1.25-alpine as production-stage
+FROM --platform=linux/amd64 nginx:1.25-alpine as production-stage
 WORKDIR /usr/share/nginx/html
 COPY --from=build-stage /app/dist .
 EXPOSE 80
